--- a/sprint4/Kode/Foundation/Voksen/kompetanse.html
+++ b/sprint4/Kode/Foundation/Voksen/kompetanse.html
@@ -63,7 +63,22 @@
                       <dd class="accordion-navigation">
                         <a href="#panel1b">Engelsk / Etter 2.årstrinn</a>
                         <div id="panel1b" class="content active">
-                          Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            <ul>
+                                <li><h3>Språklæring</h3></li>
+                                <li>Gi eksempler på noen situasjoner der det kan være nyttig å kunne engelsk</li>
+                                <li>Finne ord og uttrykk som er felles for engelsk og eget morsmål</li>
+                                <li>bruke digitale ressurser i opplevelse av språket</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Muntlig kommunikasjon</h3></li>
+                                <li>lytte etter og bruke engelske språklyder gjennom praktisk-estetiske uttrykksmåter</li>
+                                <li>lytte til og forstå enkle instruksjoner på engelsk</li>
+                                <li>lytte til og forstå ord og uttrykk i engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                                <li>forstå og bruke noen engelske ord, uttrykk og setningsmønstre knyttet til nære omgivelser og egne interesser</li>
+                                <li>ghilse, stille og svare på enkle spørsmål og bruke noen høflighetsuttrykk</li>
+                                <li>delta i enkle innøvde dialoger og spontane samtaler knyttet til nære omgivelser og egne opplevelser</li>
+                                <li>bruke tall i samtale om nære omgivelser og egne opplevelser</li>
+                            </ul>
                         </div>
                       </dd>
                       <dd class="accordion-navigation">
