--- a/sprint4/Kode/Foundation/Voksen/kompetanse.html
+++ b/sprint4/Kode/Foundation/Voksen/kompetanse.html
@@ -7,6 +7,7 @@
     <title>Forside Barn</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/styleVoksen.css" />
+    <link rel="stylesheet" href="css/styleKompetanse.css" />
 
     <script src="js/vendor/modernizr.js"></script>
 </head>
