lagt til bilde i promoslider, og justert denne..

--- a/sprint4/Kode/Foundation/Voksen/voksenForside.html
+++ b/sprint4/Kode/Foundation/Voksen/voksenForside.html
@@ -21,13 +21,13 @@
                 <div class="large-6 small-8 columns">
                     <div class="menuHeader">
                         <ul>
-                            <li><a href="voksenForside">Hjem</a>
+                            <li><a href="voksenForside.html">Hjem</a>
                             </li>
-                            <li><a href="bestilling">Bestillinger</a>
+                            <li><a href="bestilling.html">Bestillinger</a>
                             </li>
-                            <li><a href="kompetanse#engelskAco">Kompetansemål</a>
+                            <li><a href="kompetanse.html">Kompetansemål</a>
                             </li>
-                            <li><a href="informasjon">Informasjon</a>
+                            <li><a href="informasjon.html">Informasjon</a>
                             </li>
                             <li><a href="../Barn/barnForside.html">Til Barnesiden</a>
                             </li>
@@ -41,7 +41,17 @@
         <!--SLIDER-->
         <div class="row">
             <div class="large-12 columns">
-                <aside id="promoBanner"></aside>
+                <aside id="promoBanner">
+                    <div id="promobannerTextBox">
+                    <h3>HISTORIEN OM EUROPA</h3>
+                    <p>NYHET: Helt ferske temasider om 
+                    romertiden, middelalderen, 
+                    renessansen og opplysningstiden 
+                    er nå tilgjengelig under
+                    «Historien om Europa» for 5.-7. trinn.</p>
+                    </div>
+                    <img src="img/nyheter/historienOmEuropa.png">
+                </aside>
             </div>
         </div>
         <!--OMRÅDE FOR ARTIKLER-->
