--- a/sprint4/Kode/Foundation/Voksen/kompetanse.html
+++ b/sprint4/Kode/Foundation/Voksen/kompetanse.html
@@ -80,6 +80,17 @@
                                 <li>delta i enkle innøvde dialoger og spontane samtaler knyttet til nære omgivelser og egne opplevelser</li>
                                 <li>bruke tall i samtale om nære omgivelser og egne opplevelser</li>
                             </ul>
+                            <ul>
+                                <li><h3>Skriftlig kommunikasjon</h3></li>
+                                <li>kjenne igjen sammenhengen mellom noen engelske språklyder og stavemønstre</li>
+                                <li>eksperimentere med å lese og skrive engelske ord, uttrykk og enkle setninger knyttet til nære omgivelser og egne interesser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Kultur, samfunn og litteratur</h3></li>
+                                <li>samtale om sider ved barns dagligliv i engelskspråklige land</li>
+                                <li>ta del i og oppleve barnekultur fra engelskspråklige land gjennom å bruke ord, bilder, musikk og bevegelse</li>
+                                <li>gi uttrykk for egne opplevelser av engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                            </ul>
                         </div>
                       </dd>
                       <dd class="accordion-navigation">
@@ -283,6 +294,7 @@
             </div>
         </div>
     </section>
+    </div>
 
     <!-- FOOTER -->
     <!-- salaby logo -->
