--- a/sprint4/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint4/Kode/Foundation/Barn/RLE_side.html
@@ -12,28 +12,31 @@
 </head>
 
 <body>
-    <div id="mainHeader">
-        <div class="row">
-            <div class="large-12 columns">
-                <div class="large-8 small-4 columns">
-                     <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
-                </div>
-                <div class="large-4 small-8 columns">
-                    <div class="menuHeader">
-                        <ul>
-                            <li><a href="#">Lærer/foreldre siden</a>
-                            </li>
-                            <li><a href="#">Min side</a>
-                            </li>
-                            <li><a href="#">Logg ut</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--MENU-->
+    <div class="fixed">
+        <nav class="top-bar" data-topbar role="navigation">
+            <ul class="title-area">
+                <li class="name">
+                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
+                </li>
+                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+                </li>
+            </ul>
 
+            <section class="top-bar-section">
+                <!-- Right Nav Section -->
+                <ul class="right">
+                    <li><a href="#">Lærer/foreldre siden</a>
+                    </li>
+                    <li><a href="#">Min side</a>
+                    </li>
+                    <li><a href="#">Logg ut</a>
+                    </li>
+                </ul>
+            </section>
+        </nav>
+    </div>
    <div class="row" id="mainMenu">
         <div class="large-12 columns">
             <div class="row">
@@ -104,7 +107,7 @@
             <img src="img/logos/salaby_logo_enkel_grå.png">
         </div>
         <!-- lenker i midten -->
-        <div id="footerMid" class="large-6 columns">
+        <div id="footerMid" class="large-3 columns">
             <ul>
                 <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
                 </li>
@@ -115,7 +118,7 @@
             </ul>
         </div>
         <!-- sosiale medier -->
-        <div id="socialLinks" class="large-2 columns">
+        <div id="socialLinks" class="large-2 small-6 columns">
             <a href="https://www.facebook.com/salaby">
                 <img src="img/social/facebook_logo.png">
             </a>
