jobbet med nyheter på voksensiden

--- a/sprint4/Kode/Foundation/Voksen/voksenForside.html
+++ b/sprint4/Kode/Foundation/Voksen/voksenForside.html
@@ -60,29 +60,50 @@
             <h1>Nyheter</h1>
             </div>
         </div>
-        <div class="row">
-            <div id="articleOmrade">
+        
+        <div id="articleOmrade">
+            <div class="row">
                 <!--KODE BLOKK FOR HVER ARTIKKEL-->
                 <div class="large-4 small-12 columns">
-                    
                     <article>
-                        <h3>OVERSKRIFT 1</h3>
-                        <img class="articleImg" src="img/RLE/budd.png" />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+                        <h3>ALF PRØYSEN</h3>
+                        <img class="articleImg" src="img/nyheter/alfProysen.png" />
+                        <p>Alf Prøysen ville fylt 100 år i 2014, og i
+                        anledning jubileet tilbyr vi egne temasider om
+                        den folkekjære visesangeren og forfatteren.</p>
                     </article>
                 </div>
                 <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
                 <!--KODE BLOKK FOR HVER ARTIKKEL-->
                 <div class="large-4 small-12 columns">
                     <article>
-                        <h3>OVERSKRIFT 2</h3>
-                        <img class="articleImg" src="img/RLE/budd.png" />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
+                        <h3>INNHOLD PÅ ENGELSK</h3>
+                        <img class="articleImg" src="img/nyheter/innholdPaaEngelsk.png" />
+                        <ul>
+                        <li>- nye kapitler til fortellingen 'Dad missing!'</li>
+                        <li>- nivådelte oppgaver og tester til alle kapitler</li>
+                        <li>- oppdatert bibliotek</li>
+                        <li>- øvelser og tester til alle temaer i grammatikk</li>
+                        <li>- ny 'Task of the week' hver uke</li>
+                        </ul>
                     </article>
                 </div>
                 <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
                 <!--KODE BLOKK FOR HVER ARTIKKEL-->
                 <div class="large-4 small-12 columns">
+                    <article>
+                        <h3>TV-AKSJONEN 2014</h3>
+                        <img class="articleImg" src="img/nyheter/tv-aksjonenNRK.png" />
+                        <p>Dato for årets TV-aksjon er 19. oktober, 
+                        og Salaby tilbyr også i år egne skolesider 
+                        knyttet til tema for aksjonen.</p>
+                    </article>
+                </div>
+                <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
+                <!--KODE BLOKK FOR HVER ARTIKKEL-->
+                </div>
+                <div class="row">
+                <div class="large-6 small-12 columns">
                     <article>
                         <h3>OVERSKRIFT 3</h3>
                         <img class="articleImg" src="img/RLE/budd.png" />
@@ -91,16 +112,7 @@
                 </div>
                 <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
                 <!--KODE BLOKK FOR HVER ARTIKKEL-->
-                <div class="large-4 small-12 columns">
-                    <article>
-                        <h3>OVERSKRIFT 3</h3>
-                        <img class="articleImg" src="img/RLE/budd.png" />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et venenatis quam. Nullam imperdiet sollicitudin purus et scelerisque. Pellentesque pharetra tempus lacus, nec blandit felis facilisis id. Cras vitae felis interdum, mollis ligula vitae, aliquam mi. Donec quis ex ac ex faucibus interdum. Nam posuere lobortis laoreet. Morbi at bibendum ipsum, non placerat justo. Aliquam sed pulvinar magna. Vestibulum tortor erat, consectetur posuere ultricies nec, sagittis ut massa. Praesent dignissim urna nec risus ultricies tristique. Pellentesque vitae risus eget mi posuere accumsan vitae ac risus. Integer non tempor eros, tristique tincidunt velit.</p>
-                    </article>
-                </div>
-                <!--KODE BLOKK FOR HVER ARTIKKEL SLUTT-->
-                <!--KODE BLOKK FOR HVER ARTIKKEL-->
-                <div class="large-8 small-12 columns">
+                <div class="large-6 small-12 columns">
                     <article>
                         <h3>OVERSKRIFT 3</h3>
                         <img class="articleImg" src="img/RLE/budd.png" />
