--- a/sprint4/Kode/Foundation/Voksen/kompetanse.html
+++ b/sprint4/Kode/Foundation/Voksen/kompetanse.html
@@ -57,7 +57,6 @@
                       <dd><a href="#matteAco">Mattematikk</a></dd>
                       <dd><a href="#samfunnAco">Samfunnsfag</a></dd>
                     </dl>
-                    
                     <div id="innholdWrapper">
                     <!--ACCORD START-->
                     <dl id="engelskAco" class="accordion" data-accordion>
@@ -96,13 +95,87 @@
                       <dd class="accordion-navigation">
                         <a href="#panel2b">Engelsk / Etter 4. årstrinn</a>
                         <div id="panel2b" class="content">
-                          Panel 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+ <ul>
+                                <li><h3>Språklæring</h3></li>
+                                <li>bruke enkle lytte- og talestrategier</li>
+                                <li>identifisere situasjoner der det kan være nyttig eller nødvendig å kunne engelsk</li>
+                                <li>Muntlig kommuniksjon</li>
+                                <li>samtale om eget arbeid med å lære engelsk</li>
+                                <li>lytte til og forstå betydningen av ord og uttrykk ut fra sammenhengen de er brukt i</li>
+                                <li>finne likheter mellom ord og uttrykksmåter i engelsk og eget morsmål</li>
+                                <li>forstå og bruke engelske ord, uttrykk og setningsmønstre knyttet til egne behov og følelser, dagligliv, fritid og interesser</li>
+                                <li>forstå hovedinnholdet i rim, regler, sanger, eventyr og fortellinger</li>
+                                <li>bruke digitale ressurser og andre hjelpemidler i utforsking av språket</li>
+                                <li>bruke noen høflighetsuttrykk og enkle fraser for å få hjelp til å forstå og bli forstått</li>
+                                <li>delta i dagligdagse samtaler knyttet til nære omgivelser og egne opplevelser</li>
+                                <li>si det engelske alfabetet og stave navn og bostedsnavn</li>
+                                <li>forstå og bruke ord og uttrykk knyttet til priser, mengder, form og størrelser i kommunikasjon om dagligliv, fritid og interesser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Skriftlig kommunikasjon</h3></li>
+                                <li>bruke enkle lese- og skrivestrategier</li>
+                                <li>forstå sammenhengen mellom engelske språklyder og bokstaver og trekke lyder sammen til ord</li>
+                                <li>forstå betydningen av ord og uttrykk ut fra sammenhengen de er brukt i</li>
+                                <li>lese, forstå og skrive engelske ord og uttrykk knyttet til egne behov og følelser, dagligliv, fritid og interesser</li>
+                                <li>forstå hovedinnholdet i enkle tekster om kjente emner</li>
+                                <li>skrive korte tekster som uttrykker meninger og interesser, og som beskriver, forteller og spør</li>
+                                <li>bruke noen vanlige småord og enkle stave- og setningsmønstre</li>
+                                <li>bruke digitale verktøy for å hente informasjon og eksperimentere med å skape tekst</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Kultur, samfunn og litteratur</h3></li>
+                                <li>kjenne igjen sammenhengen mellom noen engelske språklyder og stavemønstre</li>
+                                <li>eksperimentere med å lese og skrive engelske ord, uttrykk og enkle setninger knyttet til nære omgivelser og egne interesser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Kultur, samfunn og litteratur</h3></li>
+                                <li>gi noen eksempler på engelskspråklige land og kjente personer derfra</li>
+                                <li>samtale om noen sider ved ulike levesett, tradisjoner og skikker i engelskspråklige land og i Norge</li>
+                                <li>delta i framføring av engelskspråklige rim, regler, sanger, korte skuespill og fortellinger</li>
+                                <li>gi uttrykk for egne tanker og meninger i møte med engelskspråklig litteratur og barnekultur</li>
+                                <li>lage egne tekster inspirert av engelskspråklig litteratur og barnekultur</li>
+                            </ul>
                         </div>
                       </dd>
                       <dd class="accordion-navigation">
                         <a href="#panel3b">Engelsk / Etter 7. årstrinn</a>
                         <div id="panel3b" class="content">
-                          Panel 3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            <ul>
+                                <li><h3>Språklæring</h3></li>
+                                <li>identifisere og bruke ulike situasjoner og læringsstrategier for å utvide egne ferdigheter i engelsk</li>
+                                <li>beskrive eget arbeid med å lære engelsk</li>
+                                <li>identifisere noen språklige likheter og ulikheter mellom engelsk og eget morsmål</li>
+                                <li>bruke digitale ressurser og andre hjelpemidler i egen språklæring</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Muntlig kommunikasjon</h3></li>
+                                <li>bruke lytte- og talestrategier</li>
+                                <li>forstå og bruke et ordforråd knyttet til kjente emner</li>
+                                <li>forstå hovedinnholdet i muntlige tekster om kjente emner</li>
+                                <li>bruke høflighetsuttrykk og situasjonsrelaterte uttrykk</li>
+                                <li>uttrykke seg for å få hjelp til å forstå og bli forstått i ulike situasjoner</li>
+                                <li>uttrykke og begrunne egen mening om kjente emner</li>
+                                <li>innlede, holde i gang og avslutte samtaler knyttet til kjente situasjoner</li>
+                                <li>bruke grunnleggende mønstre for uttale, intonasjon, ordbøying og setningstyper i kommunikasjon</li>
+                                <li>uttrykke seg om enkle beregninger, valuta og måleenheter i kommunikasjon om dagligdagse situasjoner</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Skriftlig kommunikasjon</h3></li>
+                                <li>bruke lese- og skrivestrategier</li>
+                                <li>forstå og bruke et ordforråd knyttet til kjente emner</li>
+                                <li>forstå hovedinnholdet i selvvalgte tekster</li>
+                                <li>lese og forstå ulike typer tekster av varierende omfang fra forskjellige kilder</li>
+                                <li>ta notater for å lage ulike typer tekster</li>
+                                <li>skrive sammenhengende tekster som forteller, gjenforteller, beskriver opplevelser og uttrykker egne meninger</li>
+                                <li>bruke grunnleggende mønstre for rettskriving, ordbøying, setnings- og tekstbygging i produksjon av tekst</li>
+                                <li>bruke digitale verktøy og andre hjelpemidler for å finne relevant informasjon og lage ulike typer tekster</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Kultur, samfunn og litteratur</h3></li>
+                                <li>samtale om sider ved barns dagligliv i engelskspråklige land</li>
+                                <li>ta del i og oppleve barnekultur fra engelskspråklige land gjennom å bruke ord, bilder, musikk og bevegelse</li>
+                                <li>gi uttrykk for egne opplevelser av engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                            </ul>
                         </div>
                       </dd>
                     </dl>
