--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -12,26 +12,30 @@
 </head>
 
 <body>
-    <div id="mainHeader">
-        <div class="row">
-            <div class="large-12 columns">
-                <div class="large-8 small-4 columns">
+    <!--MENU-->
+    <div class="fixed">
+        <nav class="top-bar" data-topbar role="navigation">
+            <ul class="title-area">
+                <li class="name">
                     <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
-                </div>
-                <div class="large-4 small-8 columns">
-                    <div class="menuHeader">
-                        <ul>
-                            <li><a href="../Voksen/voksenForside.html">Lærer/foreldre siden</a>
-                            </li>
-                            <li><a href="#">Min side</a>
-                            </li>
-                            <li><a href="#">Logg ut</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+                </li>
+                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+                </li>
+            </ul>
+
+            <section class="top-bar-section">
+                <!-- Right Nav Section -->
+                <ul class="right">
+                    <li><a href="#">Lærer/foreldre siden</a>
+                    </li>
+                    <li><a href="#">Min side</a>
+                    </li>
+                    <li><a href="#">Logg ut</a>
+                    </li>
+                </ul>
+            </section>
+        </nav>
     </div>
 
     <!--!!!!!!!!!!!!!!MENY!!!!!!!!!!!!!!-->
