fiksa lenker o shit!!

--- a/sprint4/Kode/Foundation/Voksen/voksenForside.html
+++ b/sprint4/Kode/Foundation/Voksen/voksenForside.html
@@ -80,11 +80,11 @@
                         <h3>INNHOLD PÅ ENGELSK</h3>
                         <img class="articleImg" src="img/nyheter/innholdPaaEngelsk.png" />
                         <ul>
-                        <li>- nye kapitler til fortellingen 'Dad missing!'</li>
-                        <li>- nivådelte oppgaver og tester til alle kapitler</li>
-                        <li>- oppdatert bibliotek</li>
-                        <li>- øvelser og tester til alle temaer i grammatikk</li>
-                        <li>- ny 'Task of the week' hver uke</li>
+                        <li>- Nye kapitler til fortellingen 'Dad missing!'</li>
+                        <li>- Nivådelte oppgaver og tester til alle kapitler</li>
+                        <li>- Oppdatert bibliotek</li>
+                        <li>- Øvelser og tester til alle temaer i grammatikk</li>
+                        <li>- Ny 'Task of the week' hver uke</li>
                         </ul>
                     </article>
                 </div>
