--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -27,7 +27,7 @@
             <section class="top-bar-section">
                 <!-- Right Nav Section -->
                 <ul class="right">
-                    <li><a href="#">Lærer/foreldre siden</a>
+                    <li><a href="../Voksen/voksenForside.html">Lærer/foreldre siden</a>
                     </li>
                     <li><a href="#">Min side</a>
                     </li>
