--- a/sprint4/Kode/Foundation/index.html
+++ b/sprint4/Kode/Foundation/index.html
@@ -18,7 +18,7 @@
             <a href="Voksen/voksenForside">Til voksensiden</a>
         </div>
         <a href="Voksen/voksenForside">
-            <img src="img/klasserom2.svg">
+            <img src="img/adultSection.jpg">
         </a>
     </div>
 
