tilbaketiltopp og css

--- a/sprint4/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint4/Kode/Foundation/Barn/hinduisme.html
@@ -28,7 +28,7 @@
             <section class="top-bar-section">
                 <!-- Right Nav Section -->
                 <ul class="right">
-                    <li><a href="#">Lærer/foreldre siden</a>
+                    <li><a href="../voksen/voksenForside.html">Lærer/foreldre siden</a>
                     </li>
                     <li><a href="#">Min side</a>
                     </li>
@@ -121,6 +121,7 @@
             <a href="https://www.youtube.com/user/SalabyGyldendal">
                 <img src="img/social/youtube_logo.png">
             </a>
+            <a href="#0" class="cd-top">Top</a>
     </footer>
 
     <!-- FOOTER SLUTT -->
@@ -128,6 +129,7 @@
     <script src="./js/vendor/jquery.js"></script>
     <script src="./js/foundation.min.js"></script>
     <script src="./js/menuHeadScript.js"></script>
+    <script src="js/main.js"></script>
     <script>
     $(document).foundation();
     </script>
