--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -201,27 +201,17 @@
     <div class="row MFL">
         <div class="large-4 small-12 columns">
             <div class="align-center">
-                <img src="img/barnehage/biblioteket.png">
+                <img src="img/mfl/mflbarnehage.png">
             </div>
         </div>
         <div class="large-4 small-12 columns">
             <div class="align-center">
-                <img src="img/barnehage/billehagen.png">
+                <img src="img/mfl/mflmatematikk.png">
             </div>
         </div>
         <div class="large-4 small-12 columns">
             <div class="align-center">
-                <img src="img/barnehage/musikkfilm.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/barnehage/TilDeVoksene.png">
-            </div>
-        </div>
-        <div class="large-4 small-12 columns">
-            <div class="align-center">
-                <img src="img/barnehage/trampoline.png">
+                <img src="img/mfl/mflnaturfag.png">
             </div>
         </div>
     </div>
@@ -251,13 +241,14 @@
             </ul>
         </div>
         <!-- sosiale medier -->
-        <div id="socialLinks" class="large-2 columns">
+        <div id="socialLinks" class="large-2 small-12 columns">
             <a href="https://www.facebook.com/salaby">
                 <img src="img/social/facebook_logo.png">
             </a>
             <a href="https://www.youtube.com/user/SalabyGyldendal">
                 <img src="img/social/youtube_logo.png">
             </a>
+            <a href="#0" class="cd-top">top</a>
         </footer>
     <!--!!!!!!!!!!!!!!!!!!FOOTER SLUTT!!!!!!!!!!!!!!!!!!!!!!-->
 
@@ -265,6 +256,7 @@
     <script src="js/foundation.min.js"></script>
     <script src="js/menuHeadScript.js"></script>
     <script src="js/showDivsScript.js"></script>
+    <script src="js/main.js"></script>
     <script>
     $(document).foundation();
     </script>
